add optimal top n example

--- a/demo/02. Methods/05. Optimal Top N.ipynb
+++ b/demo/02. Methods/05. Optimal Top N.ipynb
@@ -59,7 +59,7 @@
    "outputs": [],
    "source": [
     "from vimms.MassSpec import IndependentMassSpectrometer\n",
-    "from vimms.Controller import SimpleMs1Controller\n",
+    "from vimms.Controller import OptimalTopNController\n",
     "from vimms.Environment import Environment\n",
     "from vimms.Common import *"
    ]
@@ -79,7 +79,8 @@
    "source": [
     "data_dir = os.path.abspath(os.path.join(os.getcwd(),'..','..','tests','integration','fixtures'))\n",
     "dataset = load_obj(os.path.join(data_dir, 'QCB_22May19_1.p'))\n",
-    "ps = load_obj(Path(data_dir,'peak_sampler_mz_rt_int_beerqcb_fragmentation.p'))"
+    "ps = load_obj(Path(data_dir,'peak_sampler_mz_rt_int_beerqcb_fragmentation.p'))\n",
+    "box_file = str(Path(data_dir, 'QCB_22May19_1_pp.csv'))"
    ]
   },
   {
@@ -93,11 +94,20 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "rt_range = [(0, 1440)]\n",
-    "min_rt = rt_range[0][0]\n",
-    "max_rt = rt_range[0][1]"
+    "type(box_file)"
    ]
   },
   {
@@ -106,8 +116,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mass_spec = IndependentMassSpectrometer(POSITIVE, dataset, ps)\n",
-    "controller = SimpleMs1Controller()"
+    "rt_range = [(0, 1440)]\n",
+    "min_rt = rt_range[0][0]\n",
+    "max_rt = rt_range[0][1]\n",
+    "\n",
+    "isolation_window = 1\n",
+    "N = 3\n",
+    "rt_tols = 15\n",
+    "mz_tols = 10\n",
+    "min_ms1_intensity = 1.75E5"
    ]
   },
   {
@@ -119,7 +136,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(1441.108s) ms_level=1: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.4120357115173/1440 [00:04<00:00, 334.07it/s]\n"
+      "2020-08-12 16:18:39.336 | DEBUG    | vimms.Controller.topN:_load_boxes:444 - Loaded 3523 boxes\n"
+     ]
+    }
+   ],
+   "source": [
+    "mass_spec = IndependentMassSpectrometer(POSITIVE, dataset, ps)\n",
+    "controller = OptimalTopNController(POSITIVE, N, isolation_window, mz_tols, rt_tols, min_ms1_intensity, box_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "(1440.000s) ms_level=1 N=3 DEW=15: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.6000000000533/1440 [00:40<00:00, 35.52it/s]\n"
      ]
     }
    ],
@@ -143,21 +178,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-07-16 17:38:59.643 | DEBUG    | vimms.Environment:write_mzML:161 - Writing mzML file to C:\\Users\\Vinny\\work\\vimms\\demo\\02. Methods\\ms1_controller.mzML\n",
-      "2020-07-16 17:41:50.515 | DEBUG    | vimms.Environment:write_mzML:168 - mzML file successfully written!\n"
+      "2020-08-12 16:19:20.217 | DEBUG    | vimms.Environment:write_mzML:162 - Writing mzML file to C:\\Users\\Vinny\\work\\vimms\\demo\\02. Methods\\results\\optimaltopn_controller.mzML\n",
+      "2020-08-12 16:22:18.483 | DEBUG    | vimms.Environment:write_mzML:169 - mzML file successfully written!\n"
      ]
     }
    ],
    "source": [
     "set_log_level_debug()\n",
-    "mzml_filename = 'ms1_controller.mzML'\n",
+    "mzml_filename = 'optimaltopn_controller.mzML'\n",
     "out_dir = os.path.join(os.getcwd(), 'results')\n",
     "env.write_mzML(out_dir, mzml_filename)"
    ]
