updated notebook for optimal top n

--- a/demo/02. Methods/05. Optimal Top N.ipynb
+++ b/demo/02. Methods/05. Optimal Top N.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. Full Scan"
+    "# 5. Optimal Top N"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook shows how to run the full scan method on a ViMMS dataset"
+    "This notebook shows how to run the optimal Top N method on a ViMMS dataset"
    ]
   },
   {
