updated chemical creation demo

--- a/demo/01. Data/03. Generating a set of random chemicals.ipynb
+++ b/demo/01. Data/03. Generating a set of random chemicals.ipynb
@@ -99,11 +99,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "out_dir = Path(base_dir, 'results', 'MS1_single')"
+    "out_dir = Path(os.getcwd(), 'results', 'MS1_single')"
    ]
   },
   {
@@ -115,19 +115,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 114087 DatabaseCompounds from C:\\Users\\Vinny\\work\\vimms\\demo\\01. Data\\example_data\\hmdb_compounds.p\n"
+      "Loaded 114087 DatabaseCompounds from C:\\Users\\Vinny\\work\\vimms\\tests\\integration\\fixtures\\hmdb_compounds.p\n"
      ]
     }
    ],
    "source": [
-    "compound_file = Path(base_dir, 'hmdb_compounds.p')\n",
+    "compound_file = Path(data_dir, 'hmdb_compounds.p')\n",
     "hmdb_compounds = load_obj(compound_file)\n",
     "if hmdb_compounds is None: # if file does not exist\n",
     "\n",
@@ -144,11 +144,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "hmdb = load_obj(Path(base_dir, 'hmdb_compounds.p'))"
+    "hmdb = load_obj(Path(data_dir, 'hmdb_compounds.p'))"
    ]
   },
   {
@@ -160,12 +160,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# the list of ROI sources created in the previous notebook '01. Download Data.ipynb'\n",
-    "ROI_Sources = [str(Path(base_dir,'beers', 'datasets'))]\n",
+    "ROI_Sources = [str(Path(data_dir, 'beer_t10_simulator_files'))]\n",
     "\n",
     "# minimum MS1 intensity of chemicals\n",
     "min_ms1_intensity = 1.75E5\n",
@@ -183,29 +182,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-07-17 16:59:40.868 | DEBUG    | vimms.Chemicals:__init__:239 - Sorting database compounds by masses\n",
-      "2020-07-17 16:59:45.482 | DEBUG    | vimms.Chemicals:sample:272 - 6500 chemicals to be created.\n",
-      "2020-07-17 16:59:46.312 | DEBUG    | vimms.Chemicals:_sample_formulae:346 - Sampling formula 0/6500\n",
-      "2020-07-17 16:59:53.743 | DEBUG    | vimms.Chemicals:_sample_formulae:346 - Sampling formula 500/6500\n",
-      "2020-07-17 17:00:05.688 | DEBUG    | vimms.Chemicals:_sample_formulae:346 - Sampling formula 1000/6500\n",
-      "2020-07-17 17:00:11.647 | DEBUG    | vimms.Chemicals:_sample_formulae:346 - Sampling formula 1500/6500\n",
-      "2020-07-17 17:00:17.380 | DEBUG    | vimms.Chemicals:_sample_formulae:346 - Sampling formula 2000/6500\n",
-      "2020-07-17 17:00:23.574 | DEBUG    | vimms.Chemicals:_sample_formulae:346 - Sampling formula 2500/6500\n",
-      "2020-07-17 17:00:29.422 | DEBUG    | vimms.Chemicals:_sample_formulae:346 - Sampling formula 3000/6500\n",
-      "2020-07-17 17:00:34.493 | DEBUG    | vimms.Chemicals:_sample_formulae:346 - Sampling formula 3500/6500\n",
-      "2020-07-17 17:00:39.538 | DEBUG    | vimms.Chemicals:_sample_formulae:346 - Sampling formula 4000/6500\n",
-      "2020-07-17 17:00:45.135 | DEBUG    | vimms.Chemicals:_sample_formulae:346 - Sampling formula 4500/6500\n",
-      "2020-07-17 17:00:52.741 | DEBUG    | vimms.Chemicals:_sample_formulae:346 - Sampling formula 5000/6500\n",
-      "2020-07-17 17:01:01.747 | DEBUG    | vimms.Chemicals:_sample_formulae:346 - Sampling formula 5500/6500\n",
-      "2020-07-17 17:01:11.681 | DEBUG    | vimms.Chemicals:_sample_formulae:346 - Sampling formula 6000/6500\n",
-      "2020-07-17 17:01:44.497 | INFO     | vimms.Common:save_obj:61 - Saving <class 'list'> to C:\\Users\\Vinny\\work\\vimms\\demo\\01. Data\\example_data\\results\\MS1_single\\hmdb_dataset.p\n"
+      "2020-08-17 11:19:01.805 | DEBUG    | vimms.Chemicals:__init__:242 - Sorting database compounds by masses\n",
+      "2020-08-17 11:19:04.369 | DEBUG    | vimms.Chemicals:sample:276 - 6500 chemicals to be created.\n",
+      "2020-08-17 11:19:05.627 | DEBUG    | vimms.Chemicals:_sample_formulae:350 - Sampling formula 0/6500\n",
+      "2020-08-17 11:19:08.278 | DEBUG    | vimms.Chemicals:_sample_formulae:350 - Sampling formula 500/6500\n",
+      "2020-08-17 11:19:10.878 | DEBUG    | vimms.Chemicals:_sample_formulae:350 - Sampling formula 1000/6500\n",
+      "2020-08-17 11:19:13.914 | DEBUG    | vimms.Chemicals:_sample_formulae:350 - Sampling formula 1500/6500\n",
+      "2020-08-17 11:19:17.182 | DEBUG    | vimms.Chemicals:_sample_formulae:350 - Sampling formula 2000/6500\n",
+      "2020-08-17 11:19:20.476 | DEBUG    | vimms.Chemicals:_sample_formulae:350 - Sampling formula 2500/6500\n",
+      "2020-08-17 11:19:23.746 | DEBUG    | vimms.Chemicals:_sample_formulae:350 - Sampling formula 3000/6500\n",
+      "2020-08-17 11:19:27.282 | DEBUG    | vimms.Chemicals:_sample_formulae:350 - Sampling formula 3500/6500\n",
+      "2020-08-17 11:19:30.752 | DEBUG    | vimms.Chemicals:_sample_formulae:350 - Sampling formula 4000/6500\n",
+      "2020-08-17 11:19:34.322 | DEBUG    | vimms.Chemicals:_sample_formulae:350 - Sampling formula 4500/6500\n",
+      "2020-08-17 11:19:38.738 | DEBUG    | vimms.Chemicals:_sample_formulae:350 - Sampling formula 5000/6500\n",
+      "2020-08-17 11:19:44.706 | DEBUG    | vimms.Chemicals:_sample_formulae:350 - Sampling formula 5500/6500\n",
+      "2020-08-17 11:19:52.105 | DEBUG    | vimms.Chemicals:_sample_formulae:350 - Sampling formula 6000/6500\n",
+      "2020-08-17 11:20:20.910 | INFO     | vimms.Common:create_if_not_exist:78 - Created C:\\Users\\Vinny\\work\\vimms\\demo\\01. Data\\results\\MS1_single\n",
+      "2020-08-17 11:20:20.911 | INFO     | vimms.Common:save_obj:91 - Saving <class 'list'> to C:\\Users\\Vinny\\work\\vimms\\demo\\01. Data\\results\\MS1_single\\hmdb_dataset.p\n"
      ]
     }
    ],
@@ -217,23 +217,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KnownChemical - 'C8H10N2O3S' rt=706.81 max_intensity=1540634.01\n",
-      "KnownChemical - 'C16H15N5O7S2' rt=628.85 max_intensity=29865355.23\n",
-      "KnownChemical - 'C17H14F3N3O2S' rt=656.33 max_intensity=5392742.37\n",
-      "KnownChemical - 'H3NO3S' rt=248.51 max_intensity=248833.42\n",
-      "KnownChemical - 'C11H19NS' rt=251.28 max_intensity=3417417.09\n",
-      "KnownChemical - 'C17H17N3O3S' rt=235.21 max_intensity=379594.54\n",
-      "KnownChemical - 'C14H25N3O4S' rt=482.16 max_intensity=583376.06\n",
-      "KnownChemical - 'C5H10OS' rt=283.33 max_intensity=497063.32\n",
-      "KnownChemical - 'C14H18O3' rt=260.40 max_intensity=1155595.19\n",
-      "KnownChemical - 'C18H18O4' rt=795.26 max_intensity=620436.20\n"
+      "KnownChemical - 'C2HCl3O2' rt=582.09 max_intensity=1616270.76\n",
+      "KnownChemical - 'H4Sn' rt=219.42 max_intensity=452090.88\n",
+      "KnownChemical - 'C11H16O9' rt=495.29 max_intensity=299551.79\n",
+      "KnownChemical - 'C25H44O7P2' rt=268.84 max_intensity=283682.78\n",
+      "KnownChemical - 'C7H9N' rt=391.54 max_intensity=1801275.67\n",
+      "KnownChemical - 'C5H6O4' rt=224.69 max_intensity=293003.09\n",
+      "KnownChemical - 'C24H30O6' rt=634.02 max_intensity=2469915.41\n",
+      "KnownChemical - 'C20H14O3' rt=418.58 max_intensity=207972.85\n",
+      "KnownChemical - 'C30H49N6O10' rt=262.84 max_intensity=465245.01\n",
+      "KnownChemical - 'C12H20N4O3' rt=670.49 max_intensity=468316.50\n"
      ]
     }
    ],
@@ -241,13 +241,6 @@
     "for chem in hmdb_dataset[0:10]:\n",
     "    print(chem)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
