Updated example notebook to run OptimalTopN in loop

--- a/demo/02. Methods/05. Optimal Top N.ipynb
+++ b/demo/02. Methods/05. Optimal Top N.ipynb
@@ -61,7 +61,9 @@
     "from vimms.MassSpec import IndependentMassSpectrometer\n",
     "from vimms.Controller import OptimalTopNController\n",
     "from vimms.Environment import Environment\n",
-    "from vimms.Common import *"
+    "from vimms.Common import *\n",
+    "\n",
+    "from mass_spec_utils.data_import.mzmine import load_picked_boxes"
    ]
   },
   {
@@ -79,8 +81,17 @@
    "source": [
     "data_dir = os.path.abspath(os.path.join(os.getcwd(),'..','..','tests','integration','fixtures'))\n",
     "dataset = load_obj(os.path.join(data_dir, 'QCB_22May19_1.p'))\n",
-    "ps = load_obj(Path(data_dir,'peak_sampler_mz_rt_int_beerqcb_fragmentation.p'))\n",
-    "box_file = str(Path(data_dir, 'QCB_22May19_1_pp.csv'))"
+    "ps = load_obj(Path(data_dir,'peak_sampler_mz_rt_int_beerqcb_fragmentation.p'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "box_file = str(Path(data_dir, 'QCB_22May19_1_pp.csv'))\n",
+    "boxes = load_picked_boxes(box_file)"
    ]
   },
   {
@@ -92,27 +103,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "str"
+       "(str, list, 3523)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(box_file)"
+    "type(box_file), type(boxes), len(boxes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,74 +139,136 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2020-08-12 16:18:39.336 | DEBUG    | vimms.Controller.topN:_load_boxes:444 - Loaded 3523 boxes\n"
-     ]
-    }
-   ],
-   "source": [
-    "mass_spec = IndependentMassSpectrometer(POSITIVE, dataset, ps)\n",
-    "controller = OptimalTopNController(POSITIVE, N, isolation_window, mz_tols, rt_tols, min_ms1_intensity, box_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "(1440.000s) ms_level=1 N=3 DEW=15: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.6000000000533/1440 [00:40<00:00, 35.52it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# create an environment to run both the mass spec and controller\n",
-    "env = Environment(mass_spec, controller, min_rt, max_rt, progress_bar=True)\n",
-    "\n",
-    "# set the log level to WARNING so we don't see too many messages when environment is running\n",
-    "set_log_level_warning()\n",
-    "\n",
-    "# run the simulation\n",
-    "env.run()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Simulated results are saved to the following .mzML file and can be viewed in tools like ToppView or using other mzML file viewers."
+    "Run the OptimalTopNController in loop"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-08-12 16:19:20.217 | DEBUG    | vimms.Environment:write_mzML:162 - Writing mzML file to C:\\Users\\Vinny\\work\\vimms\\demo\\02. Methods\\results\\optimaltopn_controller.mzML\n",
-      "2020-08-12 16:22:18.483 | DEBUG    | vimms.Environment:write_mzML:169 - mzML file successfully written!\n"
+      "(23.600s) ms_level=1 N=3 DEW=15:   2%|█▉                                                                                                                      | 23.59999999999998/1440 [00:00<00:10, 141.61it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "len(boxes) = 3523\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "(1440.000s) ms_level=1 N=3 DEW=15: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.6000000000672/1440 [00:23<00:00, 61.53it/s]\n",
+      "2020-08-21 16:49:44.850 | DEBUG    | vimms.Environment:write_mzML:163 - Writing mzML file to C:\\Users\\joewa\\Work\\git\\vimms\\demo\\02. Methods\\results\\optimaltopn_controller_0.mzML\n",
+      "2020-08-21 16:49:51.633 | DEBUG    | vimms.Environment:write_mzML:170 - mzML file successfully written!\n",
+      "(24.000s) ms_level=1 N=3 DEW=15:   2%|█▉                                                                                                                      | 23.99999999999998/1440 [00:00<00:10, 133.68it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "len(boxes) = 2951\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "(1440.000s) ms_level=1 N=3 DEW=15: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.6000000000533/1440 [00:24<00:00, 58.47it/s]\n",
+      "2020-08-21 16:50:16.261 | DEBUG    | vimms.Environment:write_mzML:163 - Writing mzML file to C:\\Users\\joewa\\Work\\git\\vimms\\demo\\02. Methods\\results\\optimaltopn_controller_1.mzML\n",
+      "2020-08-21 16:50:21.826 | DEBUG    | vimms.Environment:write_mzML:170 - mzML file successfully written!\n",
+      "(25.600s) ms_level=1 N=3 DEW=15:   2%|██                                                                                                                     | 25.599999999999973/1440 [00:00<00:10, 133.65it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "len(boxes) = 2921\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "(1440.000s) ms_level=1 N=3 DEW=15: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.6000000000533/1440 [00:23<00:00, 60.53it/s]\n",
+      "2020-08-21 16:50:45.615 | DEBUG    | vimms.Environment:write_mzML:163 - Writing mzML file to C:\\Users\\joewa\\Work\\git\\vimms\\demo\\02. Methods\\results\\optimaltopn_controller_2.mzML\n",
+      "2020-08-21 16:50:51.335 | DEBUG    | vimms.Environment:write_mzML:170 - mzML file successfully written!\n",
+      "(21.600s) ms_level=1 N=3 DEW=15:   1%|█▊                                                                                                                     | 21.599999999999987/1440 [00:00<00:12, 113.59it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "len(boxes) = 2907\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "(1440.000s) ms_level=1 N=3 DEW=15: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.6000000000536/1440 [00:26<00:00, 55.15it/s]\n",
+      "2020-08-21 16:51:17.446 | DEBUG    | vimms.Environment:write_mzML:163 - Writing mzML file to C:\\Users\\joewa\\Work\\git\\vimms\\demo\\02. Methods\\results\\optimaltopn_controller_3.mzML\n",
+      "2020-08-21 16:51:22.879 | DEBUG    | vimms.Environment:write_mzML:170 - mzML file successfully written!\n",
+      "(25.600s) ms_level=1 N=3 DEW=15:   2%|██                                                                                                                     | 25.599999999999973/1440 [00:00<00:09, 145.45it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "len(boxes) = 2899\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "(715.200s) ms_level=1 N=3 DEW=15:  50%|███████████████████████████████████████████████████████████▌                                                            | 715.1999999999765/1440 [00:15<00:15, 46.96it/s]"
      ]
     }
    ],
    "source": [
-    "set_log_level_debug()\n",
-    "mzml_filename = 'optimaltopn_controller.mzML'\n",
-    "out_dir = os.path.join(os.getcwd(), 'results')\n",
-    "env.write_mzML(out_dir, mzml_filename)"
+    "for i in range(5):\n",
+    "    # initialise mass spec and controller\n",
+    "    mass_spec = IndependentMassSpectrometer(POSITIVE, dataset, ps)\n",
+    "    controller = OptimalTopNController(POSITIVE, N, isolation_window, mz_tols, rt_tols, min_ms1_intensity, boxes)\n",
+    "    print('len(boxes) = %d' % len(controller.boxes))\n",
+    "    \n",
+    "    # create an environment to run both the mass spec and controller\n",
+    "    env = Environment(mass_spec, controller, min_rt, max_rt, progress_bar=True)\n",
+    "\n",
+    "    # set the log level to WARNING so we don't see too many messages when environment is running\n",
+    "    set_log_level_warning()\n",
+    "\n",
+    "    # run the simulation\n",
+    "    env.run()\n",
+    "\n",
+    "    # write out mzML file\n",
+    "    set_log_level_debug()\n",
+    "    mzml_filename = 'optimaltopn_controller_%d.mzML' % i\n",
+    "    out_dir = os.path.join(os.getcwd(), 'results')\n",
+    "    env.write_mzML(out_dir, mzml_filename)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
