added some base classes to the samplers

--- a/experimental/ChemicalMixtureCreatorExample.ipynb
+++ b/experimental/ChemicalMixtureCreatorExample.ipynb
@@ -351,16 +351,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x12ec7f550>"
+       "<matplotlib.image.AxesImage at 0x128f2a5d0>"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     },
