--- a/experimental/ChemicalMixtureCreatorExample.ipynb
+++ b/experimental/ChemicalMixtureCreatorExample.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
     "\n",
     "# Chemical creator import\n",
     "from vimms.Chemicals import ChemicalMixtureCreator\n",
-    "from vimms.ChemicalSamplers import UniformRTAndIntensitySampler, UniformMS2Sampler, CRPMS2Sampler, GaussianChromatogramSampler\n",
+    "from vimms.ChemicalSamplers import UniformRTAndIntensitySampler, UniformMS2Sampler, CRPMS2Sampler, GaussianChromatogramSampler, DatabaseFormulaSampler, UniformMZFormulaSampler\n",
     "\n",
     "\n"
    ]
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,17 +92,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2020-08-26 16:11:46.538 | DEBUG    | vimms.Chemicals:__init__:632 - Sorting database compounds by masses\n",
-      "2020-08-26 16:11:49.957 | DEBUG    | vimms.Chemicals:_sample_formulas:679 - 10431 unique formulas in filtered database\n",
-      "2020-08-26 16:11:49.960 | DEBUG    | vimms.Chemicals:_sample_formulas:681 - Sampled formulas\n",
-      "2020-08-26 16:11:49.973 | DEBUG    | vimms.Chemicals:sample:646 - Sampled rt and intensity values and chromatograms\n"
+     "ename": "TypeError",
+     "evalue": "isinstance() arg 2 must be a type or tuple of types",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-41-7c890ceed1d7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     25\u001b[0m                             ms2_sampler = us)\n\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m \u001b[0md\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mMZ_RANGE\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mRT_RANGE\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mN_CHEMS\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/git/vimms/vimms/Chemicals.py\u001b[0m in \u001b[0;36msample\u001b[0;34m(self, mz_range, rt_range, n_chemicals, ms_levels, include_adducts_isotopes)\u001b[0m\n\u001b[1;32m    610\u001b[0m             \u001b[0mmax_intensity\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mintensity_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    611\u001b[0m             \u001b[0mchromatogram\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mchromatogram_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 612\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mformula\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'vimms.Common.Formula'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    613\u001b[0m                 \u001b[0misotopes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mIsotopes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mformula\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    614\u001b[0m                 \u001b[0madducts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mAdducts\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mformula\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madduct_proportion_cutoff\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0madduct_prior_dict\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madduct_prior_dict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: isinstance() arg 2 must be a type or tuple of types"
      ]
     }
    ],
@@ -121,9 +123,14 @@
     "# generates Gaussian chromatograms\n",
     "cs = GaussianChromatogramSampler()\n",
     "\n",
+    "# generates formulas from HMDB\n",
+    "hf = DatabaseFormulaSampler(HMDB)\n",
+    "\n",
+    "hf = UniformMZFormulaSampler()\n",
+    "\n",
     "# The chemical mixture creator object\n",
     "\n",
-    "cm = ChemicalMixtureCreator(HMDB, rt_and_intensity_sampler=uu, \n",
+    "cm = ChemicalMixtureCreator(hf, rt_and_intensity_sampler=uu, \n",
     "                            adduct_prior_dict=ADDUCT_DICT_POS_MH,\n",
     "                            chromatogram_sampler=cs,\n",
     "                            ms2_sampler = us)\n",
@@ -140,86 +147,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KnownChemical - 'C7H6O' rt=323.60 max_intensity=7702245.43\n",
-      "\t MSN Fragment mz=53.0534 ms_level=2\n",
-      "\t MSN Fragment mz=74.6480 ms_level=2\n",
-      "\t MSN Fragment mz=80.8579 ms_level=2\n",
-      "\t MSN Fragment mz=81.8378 ms_level=2\n",
-      "\t MSN Fragment mz=83.1820 ms_level=2\n",
-      "\t MSN Fragment mz=84.0807 ms_level=2\n",
-      "\t MSN Fragment mz=95.7940 ms_level=2\n",
-      "KnownChemical - 'C38H72O5' rt=334.92 max_intensity=4252674.08\n",
-      "\t MSN Fragment mz=141.8480 ms_level=2\n",
-      "\t MSN Fragment mz=208.6873 ms_level=2\n",
-      "\t MSN Fragment mz=261.9714 ms_level=2\n",
-      "\t MSN Fragment mz=314.9548 ms_level=2\n",
-      "\t MSN Fragment mz=327.4422 ms_level=2\n",
-      "\t MSN Fragment mz=438.5307 ms_level=2\n",
-      "\t MSN Fragment mz=483.5359 ms_level=2\n",
-      "\t MSN Fragment mz=563.0661 ms_level=2\n",
-      "\t MSN Fragment mz=577.6028 ms_level=2\n",
-      "\t MSN Fragment mz=582.7311 ms_level=2\n",
-      "KnownChemical - 'C7H15N3O2' rt=387.11 max_intensity=13741.42\n",
-      "\t MSN Fragment mz=69.4595 ms_level=2\n",
-      "\t MSN Fragment mz=75.1783 ms_level=2\n",
-      "\t MSN Fragment mz=97.2549 ms_level=2\n",
-      "\t MSN Fragment mz=108.1261 ms_level=2\n",
-      "\t MSN Fragment mz=117.6195 ms_level=2\n",
-      "\t MSN Fragment mz=160.4621 ms_level=2\n",
-      "\t MSN Fragment mz=172.6218 ms_level=2\n",
-      "KnownChemical - 'C20H38O11' rt=397.28 max_intensity=11464.92\n",
-      "\t MSN Fragment mz=159.5961 ms_level=2\n",
-      "\t MSN Fragment mz=279.7059 ms_level=2\n",
-      "KnownChemical - 'C15H24O3' rt=407.53 max_intensity=229194.77\n",
-      "\t MSN Fragment mz=117.6405 ms_level=2\n",
-      "\t MSN Fragment mz=190.7633 ms_level=2\n",
-      "\t MSN Fragment mz=193.3313 ms_level=2\n",
-      "\t MSN Fragment mz=201.3324 ms_level=2\n",
-      "\t MSN Fragment mz=212.0929 ms_level=2\n",
-      "\t MSN Fragment mz=226.5327 ms_level=2\n",
-      "\t MSN Fragment mz=244.3247 ms_level=2\n",
-      "KnownChemical - 'C6H12N2O4S2' rt=416.33 max_intensity=4755875.87\n",
-      "\t MSN Fragment mz=62.1765 ms_level=2\n",
-      "\t MSN Fragment mz=108.6469 ms_level=2\n",
-      "\t MSN Fragment mz=114.8257 ms_level=2\n",
-      "\t MSN Fragment mz=213.5079 ms_level=2\n",
-      "\t MSN Fragment mz=229.3176 ms_level=2\n",
-      "KnownChemical - 'C16H28O8' rt=420.18 max_intensity=470558.48\n",
-      "\t MSN Fragment mz=73.3021 ms_level=2\n",
-      "\t MSN Fragment mz=152.3419 ms_level=2\n",
-      "\t MSN Fragment mz=170.3656 ms_level=2\n",
-      "KnownChemical - 'C10H13N3O3' rt=484.29 max_intensity=59737.55\n",
-      "\t MSN Fragment mz=76.0540 ms_level=2\n",
-      "\t MSN Fragment mz=147.9055 ms_level=2\n",
-      "\t MSN Fragment mz=171.6858 ms_level=2\n",
-      "\t MSN Fragment mz=182.4845 ms_level=2\n",
-      "\t MSN Fragment mz=214.6469 ms_level=2\n",
-      "KnownChemical - 'C29H48O' rt=489.55 max_intensity=109775.90\n",
-      "\t MSN Fragment mz=144.7882 ms_level=2\n",
-      "\t MSN Fragment mz=161.1274 ms_level=2\n",
-      "\t MSN Fragment mz=244.7989 ms_level=2\n",
-      "\t MSN Fragment mz=250.2313 ms_level=2\n",
-      "\t MSN Fragment mz=310.5615 ms_level=2\n",
-      "\t MSN Fragment mz=312.6321 ms_level=2\n",
-      "\t MSN Fragment mz=319.1692 ms_level=2\n",
-      "KnownChemical - 'C12H16ClNO' rt=489.66 max_intensity=7272711.45\n",
-      "\t MSN Fragment mz=50.5190 ms_level=2\n",
-      "\t MSN Fragment mz=83.3558 ms_level=2\n",
-      "\t MSN Fragment mz=89.3975 ms_level=2\n",
-      "\t MSN Fragment mz=129.3948 ms_level=2\n",
-      "\t MSN Fragment mz=171.2666 ms_level=2\n",
-      "\t MSN Fragment mz=189.5149 ms_level=2\n",
-      "\t MSN Fragment mz=196.4046 ms_level=2\n",
-      "\t MSN Fragment mz=207.3518 ms_level=2\n",
-      "\t MSN Fragment mz=212.2554 ms_level=2\n",
-      "\t MSN Fragment mz=215.6615 ms_level=2\n"
+      "KnownChemical - 'C39H47N5O5' rt=302.28 max_intensity=747000.03\n",
+      "\t MSN Fragment mz=148.5030 ms_level=2\n",
+      "\t MSN Fragment mz=296.5924 ms_level=2\n",
+      "\t MSN Fragment mz=429.7184 ms_level=2\n",
+      "\t MSN Fragment mz=488.3322 ms_level=2\n",
+      "\t MSN Fragment mz=591.4519 ms_level=2\n",
+      "\t MSN Fragment mz=619.0704 ms_level=2\n",
+      "KnownChemical - 'C43H78O5' rt=308.07 max_intensity=744866.57\n",
+      "\t MSN Fragment mz=151.2526 ms_level=2\n",
+      "\t MSN Fragment mz=368.8561 ms_level=2\n",
+      "\t MSN Fragment mz=477.6754 ms_level=2\n",
+      "\t MSN Fragment mz=568.7815 ms_level=2\n",
+      "\t MSN Fragment mz=632.9913 ms_level=2\n",
+      "KnownChemical - 'C30H48O2' rt=343.78 max_intensity=1647865.15\n",
+      "\t MSN Fragment mz=51.8405 ms_level=2\n",
+      "\t MSN Fragment mz=129.4820 ms_level=2\n",
+      "\t MSN Fragment mz=162.4652 ms_level=2\n",
+      "\t MSN Fragment mz=219.3370 ms_level=2\n",
+      "\t MSN Fragment mz=235.9387 ms_level=2\n",
+      "\t MSN Fragment mz=339.6910 ms_level=2\n",
+      "\t MSN Fragment mz=430.3538 ms_level=2\n",
+      "KnownChemical - 'C28H38O13' rt=347.21 max_intensity=7685937.64\n",
+      "\t MSN Fragment mz=208.0096 ms_level=2\n",
+      "\t MSN Fragment mz=270.2632 ms_level=2\n",
+      "\t MSN Fragment mz=374.4745 ms_level=2\n",
+      "\t MSN Fragment mz=425.8032 ms_level=2\n",
+      "\t MSN Fragment mz=452.3674 ms_level=2\n",
+      "\t MSN Fragment mz=462.0328 ms_level=2\n",
+      "\t MSN Fragment mz=492.0066 ms_level=2\n",
+      "\t MSN Fragment mz=521.7934 ms_level=2\n",
+      "\t MSN Fragment mz=525.8507 ms_level=2\n",
+      "KnownChemical - 'C27H42N2O6S' rt=360.96 max_intensity=3941566.54\n",
+      "\t MSN Fragment mz=54.3575 ms_level=2\n",
+      "\t MSN Fragment mz=202.7126 ms_level=2\n",
+      "\t MSN Fragment mz=268.4487 ms_level=2\n",
+      "\t MSN Fragment mz=381.7287 ms_level=2\n",
+      "\t MSN Fragment mz=444.8283 ms_level=2\n",
+      "\t MSN Fragment mz=462.3672 ms_level=2\n",
+      "\t MSN Fragment mz=488.7960 ms_level=2\n",
+      "\t MSN Fragment mz=512.2791 ms_level=2\n",
+      "KnownChemical - 'C37H36N2O11' rt=369.93 max_intensity=12134.24\n",
+      "\t MSN Fragment mz=52.7112 ms_level=2\n",
+      "\t MSN Fragment mz=166.1020 ms_level=2\n",
+      "\t MSN Fragment mz=203.1307 ms_level=2\n",
+      "\t MSN Fragment mz=477.6366 ms_level=2\n",
+      "\t MSN Fragment mz=573.4424 ms_level=2\n",
+      "KnownChemical - 'C10H13N3' rt=372.69 max_intensity=9717552.83\n",
+      "\t MSN Fragment mz=50.4657 ms_level=2\n",
+      "\t MSN Fragment mz=83.9550 ms_level=2\n",
+      "\t MSN Fragment mz=96.8137 ms_level=2\n",
+      "\t MSN Fragment mz=119.5446 ms_level=2\n",
+      "\t MSN Fragment mz=119.6944 ms_level=2\n",
+      "\t MSN Fragment mz=121.8963 ms_level=2\n",
+      "\t MSN Fragment mz=123.7647 ms_level=2\n",
+      "\t MSN Fragment mz=137.1257 ms_level=2\n",
+      "\t MSN Fragment mz=163.2732 ms_level=2\n",
+      "KnownChemical - 'C17H20FN3O4' rt=415.57 max_intensity=51815.55\n",
+      "\t MSN Fragment mz=53.2189 ms_level=2\n",
+      "\t MSN Fragment mz=85.8338 ms_level=2\n",
+      "\t MSN Fragment mz=87.5944 ms_level=2\n",
+      "\t MSN Fragment mz=98.5620 ms_level=2\n",
+      "\t MSN Fragment mz=101.1373 ms_level=2\n",
+      "\t MSN Fragment mz=143.3015 ms_level=2\n",
+      "\t MSN Fragment mz=149.8258 ms_level=2\n",
+      "\t MSN Fragment mz=230.4687 ms_level=2\n",
+      "\t MSN Fragment mz=305.4756 ms_level=2\n",
+      "KnownChemical - 'C8H8Cl2N4' rt=436.49 max_intensity=708641.91\n",
+      "\t MSN Fragment mz=63.9085 ms_level=2\n",
+      "\t MSN Fragment mz=88.3839 ms_level=2\n",
+      "\t MSN Fragment mz=92.1907 ms_level=2\n",
+      "\t MSN Fragment mz=132.2674 ms_level=2\n",
+      "\t MSN Fragment mz=164.3569 ms_level=2\n",
+      "\t MSN Fragment mz=170.5350 ms_level=2\n",
+      "\t MSN Fragment mz=223.2119 ms_level=2\n",
+      "KnownChemical - 'C32H51NO12' rt=467.93 max_intensity=1205812.80\n",
+      "\t MSN Fragment mz=57.2799 ms_level=2\n",
+      "\t MSN Fragment mz=214.7281 ms_level=2\n",
+      "\t MSN Fragment mz=224.8833 ms_level=2\n",
+      "\t MSN Fragment mz=435.8550 ms_level=2\n",
+      "\t MSN Fragment mz=455.2661 ms_level=2\n",
+      "\t MSN Fragment mz=464.5761 ms_level=2\n",
+      "\t MSN Fragment mz=482.2520 ms_level=2\n",
+      "\t MSN Fragment mz=488.8044 ms_level=2\n",
+      "\t MSN Fragment mz=597.1573 ms_level=2\n",
+      "\t MSN Fragment mz=637.4523 ms_level=2\n"
      ]
     }
    ],
@@ -240,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,14 +295,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(600.000s) ms_level=1: 100%|█████████▉| 299.99999999999994/300 [00:07<00:00, 42.21it/s] \n"
+      "(600.000s) ms_level=1: 100%|█████████▉| 299.99999999999994/300 [00:07<00:00, 38.00it/s] \n"
      ]
     }
    ],
