--- a/experimental/ChemicalMixtureCreatorExample.ipynb
+++ b/experimental/ChemicalMixtureCreatorExample.ipynb
@@ -92,22 +92,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "isinstance() arg 2 must be a type or tuple of types",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-41-7c890ceed1d7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     25\u001b[0m                             ms2_sampler = us)\n\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m \u001b[0md\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mMZ_RANGE\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mRT_RANGE\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mN_CHEMS\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/git/vimms/vimms/Chemicals.py\u001b[0m in \u001b[0;36msample\u001b[0;34m(self, mz_range, rt_range, n_chemicals, ms_levels, include_adducts_isotopes)\u001b[0m\n\u001b[1;32m    610\u001b[0m             \u001b[0mmax_intensity\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mintensity_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    611\u001b[0m             \u001b[0mchromatogram\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mchromatogram_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 612\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mformula\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'vimms.Common.Formula'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    613\u001b[0m                 \u001b[0misotopes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mIsotopes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mformula\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    614\u001b[0m                 \u001b[0madducts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mAdducts\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mformula\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madduct_proportion_cutoff\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0madduct_prior_dict\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madduct_prior_dict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: isinstance() arg 2 must be a type or tuple of types"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# sample RT and log intensity uniformly. See class def for min and max log intensity\n",
     "# returns actual intensity, but samples in log space\n",
@@ -126,6 +113,8 @@
     "# generates formulas from HMDB\n",
     "hf = DatabaseFormulaSampler(HMDB)\n",
     "\n",
+    "# or, samples them from a uniform - so just mz rather then formulas\n",
+    "# resulting in UnknownChemical objects instead of known_chemical ones\n",
     "hf = UniformMZFormulaSampler()\n",
     "\n",
     "# The chemical mixture creator object\n",
@@ -147,98 +136,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KnownChemical - 'C39H47N5O5' rt=302.28 max_intensity=747000.03\n",
-      "\t MSN Fragment mz=148.5030 ms_level=2\n",
-      "\t MSN Fragment mz=296.5924 ms_level=2\n",
-      "\t MSN Fragment mz=429.7184 ms_level=2\n",
-      "\t MSN Fragment mz=488.3322 ms_level=2\n",
-      "\t MSN Fragment mz=591.4519 ms_level=2\n",
-      "\t MSN Fragment mz=619.0704 ms_level=2\n",
-      "KnownChemical - 'C43H78O5' rt=308.07 max_intensity=744866.57\n",
-      "\t MSN Fragment mz=151.2526 ms_level=2\n",
-      "\t MSN Fragment mz=368.8561 ms_level=2\n",
-      "\t MSN Fragment mz=477.6754 ms_level=2\n",
-      "\t MSN Fragment mz=568.7815 ms_level=2\n",
-      "\t MSN Fragment mz=632.9913 ms_level=2\n",
-      "KnownChemical - 'C30H48O2' rt=343.78 max_intensity=1647865.15\n",
-      "\t MSN Fragment mz=51.8405 ms_level=2\n",
-      "\t MSN Fragment mz=129.4820 ms_level=2\n",
-      "\t MSN Fragment mz=162.4652 ms_level=2\n",
-      "\t MSN Fragment mz=219.3370 ms_level=2\n",
-      "\t MSN Fragment mz=235.9387 ms_level=2\n",
-      "\t MSN Fragment mz=339.6910 ms_level=2\n",
-      "\t MSN Fragment mz=430.3538 ms_level=2\n",
-      "KnownChemical - 'C28H38O13' rt=347.21 max_intensity=7685937.64\n",
-      "\t MSN Fragment mz=208.0096 ms_level=2\n",
-      "\t MSN Fragment mz=270.2632 ms_level=2\n",
-      "\t MSN Fragment mz=374.4745 ms_level=2\n",
-      "\t MSN Fragment mz=425.8032 ms_level=2\n",
-      "\t MSN Fragment mz=452.3674 ms_level=2\n",
-      "\t MSN Fragment mz=462.0328 ms_level=2\n",
-      "\t MSN Fragment mz=492.0066 ms_level=2\n",
-      "\t MSN Fragment mz=521.7934 ms_level=2\n",
-      "\t MSN Fragment mz=525.8507 ms_level=2\n",
-      "KnownChemical - 'C27H42N2O6S' rt=360.96 max_intensity=3941566.54\n",
-      "\t MSN Fragment mz=54.3575 ms_level=2\n",
-      "\t MSN Fragment mz=202.7126 ms_level=2\n",
-      "\t MSN Fragment mz=268.4487 ms_level=2\n",
-      "\t MSN Fragment mz=381.7287 ms_level=2\n",
-      "\t MSN Fragment mz=444.8283 ms_level=2\n",
-      "\t MSN Fragment mz=462.3672 ms_level=2\n",
-      "\t MSN Fragment mz=488.7960 ms_level=2\n",
-      "\t MSN Fragment mz=512.2791 ms_level=2\n",
-      "KnownChemical - 'C37H36N2O11' rt=369.93 max_intensity=12134.24\n",
-      "\t MSN Fragment mz=52.7112 ms_level=2\n",
-      "\t MSN Fragment mz=166.1020 ms_level=2\n",
-      "\t MSN Fragment mz=203.1307 ms_level=2\n",
-      "\t MSN Fragment mz=477.6366 ms_level=2\n",
-      "\t MSN Fragment mz=573.4424 ms_level=2\n",
-      "KnownChemical - 'C10H13N3' rt=372.69 max_intensity=9717552.83\n",
-      "\t MSN Fragment mz=50.4657 ms_level=2\n",
-      "\t MSN Fragment mz=83.9550 ms_level=2\n",
-      "\t MSN Fragment mz=96.8137 ms_level=2\n",
-      "\t MSN Fragment mz=119.5446 ms_level=2\n",
-      "\t MSN Fragment mz=119.6944 ms_level=2\n",
-      "\t MSN Fragment mz=121.8963 ms_level=2\n",
-      "\t MSN Fragment mz=123.7647 ms_level=2\n",
-      "\t MSN Fragment mz=137.1257 ms_level=2\n",
-      "\t MSN Fragment mz=163.2732 ms_level=2\n",
-      "KnownChemical - 'C17H20FN3O4' rt=415.57 max_intensity=51815.55\n",
-      "\t MSN Fragment mz=53.2189 ms_level=2\n",
-      "\t MSN Fragment mz=85.8338 ms_level=2\n",
-      "\t MSN Fragment mz=87.5944 ms_level=2\n",
-      "\t MSN Fragment mz=98.5620 ms_level=2\n",
-      "\t MSN Fragment mz=101.1373 ms_level=2\n",
-      "\t MSN Fragment mz=143.3015 ms_level=2\n",
-      "\t MSN Fragment mz=149.8258 ms_level=2\n",
-      "\t MSN Fragment mz=230.4687 ms_level=2\n",
-      "\t MSN Fragment mz=305.4756 ms_level=2\n",
-      "KnownChemical - 'C8H8Cl2N4' rt=436.49 max_intensity=708641.91\n",
-      "\t MSN Fragment mz=63.9085 ms_level=2\n",
-      "\t MSN Fragment mz=88.3839 ms_level=2\n",
-      "\t MSN Fragment mz=92.1907 ms_level=2\n",
-      "\t MSN Fragment mz=132.2674 ms_level=2\n",
-      "\t MSN Fragment mz=164.3569 ms_level=2\n",
-      "\t MSN Fragment mz=170.5350 ms_level=2\n",
-      "\t MSN Fragment mz=223.2119 ms_level=2\n",
-      "KnownChemical - 'C32H51NO12' rt=467.93 max_intensity=1205812.80\n",
-      "\t MSN Fragment mz=57.2799 ms_level=2\n",
-      "\t MSN Fragment mz=214.7281 ms_level=2\n",
-      "\t MSN Fragment mz=224.8833 ms_level=2\n",
-      "\t MSN Fragment mz=435.8550 ms_level=2\n",
-      "\t MSN Fragment mz=455.2661 ms_level=2\n",
-      "\t MSN Fragment mz=464.5761 ms_level=2\n",
-      "\t MSN Fragment mz=482.2520 ms_level=2\n",
-      "\t MSN Fragment mz=488.8044 ms_level=2\n",
-      "\t MSN Fragment mz=597.1573 ms_level=2\n",
-      "\t MSN Fragment mz=637.4523 ms_level=2\n"
+      "UnknownChemical mz=170.1128 rt=302.77 max_intensity=208136.98\n",
+      "\t MSN Fragment mz=81.0270 ms_level=2\n",
+      "\t MSN Fragment mz=103.2964 ms_level=2\n",
+      "\t MSN Fragment mz=113.9660 ms_level=2\n",
+      "\t MSN Fragment mz=142.2127 ms_level=2\n",
+      "\t MSN Fragment mz=156.7425 ms_level=2\n",
+      "\t MSN Fragment mz=161.2597 ms_level=2\n",
+      "UnknownChemical mz=350.6249 rt=321.02 max_intensity=11554.85\n",
+      "\t MSN Fragment mz=141.1161 ms_level=2\n",
+      "\t MSN Fragment mz=161.0885 ms_level=2\n",
+      "\t MSN Fragment mz=226.5223 ms_level=2\n",
+      "\t MSN Fragment mz=297.9579 ms_level=2\n",
+      "\t MSN Fragment mz=325.8475 ms_level=2\n",
+      "UnknownChemical mz=819.6273 rt=332.69 max_intensity=2022351.57\n",
+      "\t MSN Fragment mz=179.8126 ms_level=2\n",
+      "\t MSN Fragment mz=351.4586 ms_level=2\n",
+      "\t MSN Fragment mz=585.9261 ms_level=2\n",
+      "\t MSN Fragment mz=590.5982 ms_level=2\n",
+      "\t MSN Fragment mz=639.7693 ms_level=2\n",
+      "\t MSN Fragment mz=794.9073 ms_level=2\n",
+      "UnknownChemical mz=1010.8578 rt=359.78 max_intensity=8474135.92\n",
+      "\t MSN Fragment mz=124.4046 ms_level=2\n",
+      "\t MSN Fragment mz=208.6555 ms_level=2\n",
+      "\t MSN Fragment mz=337.4706 ms_level=2\n",
+      "\t MSN Fragment mz=486.0382 ms_level=2\n",
+      "\t MSN Fragment mz=525.0104 ms_level=2\n",
+      "\t MSN Fragment mz=803.2978 ms_level=2\n",
+      "UnknownChemical mz=58.0920 rt=366.85 max_intensity=4596601.93\n",
+      "\t MSN Fragment mz=50.2650 ms_level=2\n",
+      "\t MSN Fragment mz=50.6290 ms_level=2\n",
+      "\t MSN Fragment mz=51.5223 ms_level=2\n",
+      "\t MSN Fragment mz=53.9391 ms_level=2\n",
+      "\t MSN Fragment mz=57.2561 ms_level=2\n",
+      "\t MSN Fragment mz=57.5605 ms_level=2\n",
+      "\t MSN Fragment mz=57.7930 ms_level=2\n",
+      "UnknownChemical mz=7.4264 rt=386.64 max_intensity=830406.84\n",
+      "\t MSN Fragment mz=14.6489 ms_level=2\n",
+      "\t MSN Fragment mz=18.7665 ms_level=2\n",
+      "\t MSN Fragment mz=32.8945 ms_level=2\n",
+      "\t MSN Fragment mz=36.5296 ms_level=2\n",
+      "\t MSN Fragment mz=39.0068 ms_level=2\n",
+      "\t MSN Fragment mz=41.1789 ms_level=2\n",
+      "\t MSN Fragment mz=41.1797 ms_level=2\n",
+      "\t MSN Fragment mz=41.9451 ms_level=2\n",
+      "\t MSN Fragment mz=47.4354 ms_level=2\n",
+      "\t MSN Fragment mz=47.5701 ms_level=2\n",
+      "UnknownChemical mz=516.3157 rt=389.31 max_intensity=16141.43\n",
+      "\t MSN Fragment mz=59.3491 ms_level=2\n",
+      "\t MSN Fragment mz=103.0961 ms_level=2\n",
+      "\t MSN Fragment mz=281.3148 ms_level=2\n",
+      "\t MSN Fragment mz=299.6521 ms_level=2\n",
+      "\t MSN Fragment mz=360.1644 ms_level=2\n",
+      "\t MSN Fragment mz=426.2793 ms_level=2\n",
+      "\t MSN Fragment mz=459.8179 ms_level=2\n",
+      "UnknownChemical mz=131.9326 rt=421.00 max_intensity=9623592.15\n",
+      "\t MSN Fragment mz=65.8745 ms_level=2\n",
+      "\t MSN Fragment mz=68.6026 ms_level=2\n",
+      "\t MSN Fragment mz=85.8165 ms_level=2\n",
+      "\t MSN Fragment mz=87.3133 ms_level=2\n",
+      "\t MSN Fragment mz=116.4227 ms_level=2\n",
+      "\t MSN Fragment mz=120.6083 ms_level=2\n",
+      "UnknownChemical mz=774.6046 rt=448.63 max_intensity=106699.87\n",
+      "\t MSN Fragment mz=80.0158 ms_level=2\n",
+      "\t MSN Fragment mz=100.7811 ms_level=2\n",
+      "\t MSN Fragment mz=383.2148 ms_level=2\n",
+      "\t MSN Fragment mz=569.9455 ms_level=2\n",
+      "\t MSN Fragment mz=720.3012 ms_level=2\n",
+      "\t MSN Fragment mz=727.0932 ms_level=2\n",
+      "UnknownChemical mz=964.6002 rt=475.83 max_intensity=639262.87\n",
+      "\t MSN Fragment mz=54.8206 ms_level=2\n",
+      "\t MSN Fragment mz=94.5244 ms_level=2\n",
+      "\t MSN Fragment mz=111.0680 ms_level=2\n",
+      "\t MSN Fragment mz=454.3776 ms_level=2\n",
+      "\t MSN Fragment mz=651.8604 ms_level=2\n",
+      "\t MSN Fragment mz=724.3269 ms_level=2\n",
+      "\t MSN Fragment mz=899.8557 ms_level=2\n"
      ]
     }
    ],
@@ -259,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,14 +275,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(600.000s) ms_level=1: 100%|█████████▉| 299.99999999999994/300 [00:07<00:00, 38.00it/s] \n"
+      "(600.000s) ms_level=1: 100%|█████████▉| 299.99999999999994/300 [00:03<00:00, 98.13it/s]  \n"
      ]
     }
    ],
@@ -336,28 +316,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "case\n",
-      "control\n",
-      "{'case': {KnownChemical - 'C7H6O' rt=323.60 max_intensity=7702245.43: 2.0856609373408466, KnownChemical - 'C38H72O5' rt=334.92 max_intensity=4252674.08: 1.926187748635194, KnownChemical - 'C7H15N3O2' rt=387.11 max_intensity=13741.42: 1.5277630778057516, KnownChemical - 'C20H38O11' rt=397.28 max_intensity=11464.92: 3.2462958877115655, KnownChemical - 'C15H24O3' rt=407.53 max_intensity=229194.77: 1.1634138911252168, KnownChemical - 'C6H12N2O4S2' rt=416.33 max_intensity=4755875.87: 2.1876134346996587, KnownChemical - 'C16H28O8' rt=420.18 max_intensity=470558.48: 1.9208286963102386, KnownChemical - 'C10H13N3O3' rt=484.29 max_intensity=59737.55: 1.6579801825069636, KnownChemical - 'C29H48O' rt=489.55 max_intensity=109775.90: 1.0, KnownChemical - 'C12H16ClNO' rt=489.66 max_intensity=7272711.45: 1.3554483999640674}, 'control': {KnownChemical - 'C7H6O' rt=323.60 max_intensity=7702245.43: 1.0, KnownChemical - 'C38H72O5' rt=334.92 max_intensity=4252674.08: 1.0, KnownChemical - 'C7H15N3O2' rt=387.11 max_intensity=13741.42: 1.0, KnownChemical - 'C20H38O11' rt=397.28 max_intensity=11464.92: 1.0, KnownChemical - 'C15H24O3' rt=407.53 max_intensity=229194.77: 1.0, KnownChemical - 'C6H12N2O4S2' rt=416.33 max_intensity=4755875.87: 1.0, KnownChemical - 'C16H28O8' rt=420.18 max_intensity=470558.48: 1.0, KnownChemical - 'C10H13N3O3' rt=484.29 max_intensity=59737.55: 1.0, KnownChemical - 'C29H48O' rt=489.55 max_intensity=109775.90: 1.0, KnownChemical - 'C12H16ClNO' rt=489.66 max_intensity=7272711.45: 1.0}}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# make a 5 v 5 case control experiment\n",
     "n_control = 5\n",
     "n_case = 5\n",
+    "\n",
+    "# create a list of groups -- this is the order the chemical lists will return in\n",
     "group_list = ['control' for i in range(n_control)] + ['case' for i in range(n_case)]\n",
+    "\n",
+    "# create a dictionary describing what we want to happen in the groups\n",
+    "# e.g. in the 'case' group, things are not missing, and 90% of them are changing\n",
     "group_dict = {'case': {'missing_probability':0.0, 'changing_probability':0.9}}\n",
+    "\n",
+    "\n",
     "from vimms.Chemicals import MultipleMixtureCreator\n",
     "from vimms.Noise import GaussianPeakNoise\n",
-    "mmc = MultipleMixtureCreator(d,group_list,group_dict,intensity_noise = GaussianPeakNoise(sigma=0.05,log_space=True))\n",
-    "print(mmc.group_multipliers)\n",
+    "\n",
+    "# use the intensity peak noise to add some sample noise\n",
+    "intensity_noise = GaussianPeakNoise(sigma=0.1,log_space=True)\n",
+    "\n",
+    "mmc = MultipleMixtureCreator(d,group_list,group_dict,intensity_noise = intensity_noise)\n",
     "chem_lists = mmc.generate_chemical_lists()"
    ]
   },
